--- a/views/user/dashboard/group.ejs
+++ b/views/user/dashboard/group.ejs
@@ -44,17 +44,26 @@
                                  <div class="login-form">
                                     <h2 class="control-label">Select to Sync your Accounts</h4>
                                         <label class="control-label">Credit Accounts</label>
-                                        <div class="form-group">
-                                                <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                                        </div>
+                                         <!--for
+                                                <tr>
+                                                    <td>numerocuenta  balancecuenta etc</td>
+                                                    <td><input style="width:100%" type="checkbox" name="nombrevariable" value="numerocuenta"></td>                                        
+                                                </tr>
+                                            -->
                                         <label class="control-label">Savings Accounts</label>
-                                        <div class="form-group">
-                                                <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                                        </div>
+                                         <!--for
+                                                <tr>
+                                                    <td>numerocuenta  balancecuenta etc</td>
+                                                    <td><input style="width:100%" type="checkbox" name="nombrevariable" value="numerocuenta"></td>                                        
+                                                </tr>
+                                            -->
                                         <label class="control-label">Currrent Accounts</label>
-                                        <div class="form-group">
-                                                <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                                        </div>                   
+                                         <!--for
+                                                <tr>
+                                                    <td>numerocuenta  balancecuenta etc</td>
+                                                    <td><input style="width:100%" type="checkbox" name="nombrevariable" value="numerocuenta"></td>                                        
+                                                </tr>
+                                            -->                 
                                 </div>
                                  <!-- Formulario checkbox con las cuentas del usuario -->
                                   
