--- a/views/partials/dashboard/dash_head.ejs
+++ b/views/partials/dashboard/dash_head.ejs
@@ -5,7 +5,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <!-- Favicon icon -->
-<link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon.png">
 <title>EasyFinance</title>
 <!-- Bootstrap Core CSS -->
 <link href="/css/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
