--- a/views/user/dashboard/main.ejs
+++ b/views/user/dashboard/main.ejs
@@ -97,10 +97,26 @@
                         </div>
                         </a>
                     </div>
+                    <div class="col-md-3">
+                        <a href="#" onclick="document.getElementById('totransactions').style.display='block'">
+                        <div class="card p-30">
+                            <div class="media">
+                                <div class="media-left meida media-middle">
+                                    <span><i class="fa fa-exchange f-s-40 color-primary"></i></span>
+                                </div>
+                                <div class="media-body media-text-right">
+                                    <h2>Transfer</h2>
+                                    <p class="m-b-0">Transactions</p>
+                                </div>
+                            </div>
+                        </div>
+                        </a>
+                    </div>
                 </div>
             </div>        
             <!-- End Container fluid  -->
             <% include ./../../partials/dashboard/changecoin %>
+            <% include ./../../partials/dashboard/transactions %>
             <!-- footer -->
             
             <!-- End footer -->
