--- a/views/partials/dashboard/dash_sidebar.ejs
+++ b/views/partials/dashboard/dash_sidebar.ejs
@@ -16,6 +16,7 @@
                             </ul>
                         </li>
                         <li> <a href="/users/dashboard/group_accounts"><i class="fa fa-object-group"></i><span>Groups</span></a> </li>
+                        <li> <a href="/users/dashboard/transactions"><i class="fa fa-exchange"></i><span>Transactions</span></a> </li>
                         <!--
                         <li> <a href="#" class="disabled"><i class="fa fa-bitcoin"></i><span>Criptocurrency</span></a> </li>
                         <li> <a href="#" class="disabled"><i class="fa fa-money"></i><span>Investments</span></a> </li>
