--- a/views/partials/dashboard/register_account.ejs
+++ b/views/partials/dashboard/register_account.ejs
@@ -24,12 +24,18 @@
                     <!--document.elementById("soflow").value retorna la opcion seleccionada  posicion 0 es "select a currency"-->
                 </select>
             </div>
-            <label>Account Number</label>
-            <input name="number" type="number" min="0" step="any" class="form-control" placeholder="Account number" required>
-            <label>Name</label>
-            <input name="number" type="number" min="0" step="any" class="form-control" placeholder="Alias" required>
-            <label>ID</label>
-            <input name="id" type="number" min="0" step="any" class="form-control" placeholder="id" required>
+            <div class="form-group">
+              <label>Account Number</label>
+              <input name="number" type="number" min="0" step="any" class="form-control" placeholder="Account number" required>
+            </div>
+            <div class="form-group">
+              <label>Name</label>
+              <input name="number" type="number" min="0" step="any" class="form-control" placeholder="Alias" required>
+            </div>
+            <div class="form-group">
+              <label>ID</label>
+              <input name="id" type="number" min="0" step="any" class="form-control" placeholder="ID" required>
+            </div>
         </div>
       <div class="modal-footer">
             <a href="/users/dashboard/other_transactions"> <button class="btn btn-primary">Register</button></a>
