--- a/views/user/dashboard/transactions.ejs
+++ b/views/user/dashboard/transactions.ejs
@@ -26,7 +26,11 @@
             <!-- Bread crumb -->
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
-                    <h3 class="text-primary">Transactions</h3> </div>
+                    <h3 class="text-primary">Credit Accounts</h3> </div>
+                    <% if ( message ) { %>
+                        <div><%- req.flash('message') %></div>
+                    <% } %>
+                    
                 <div class="col-md-7 align-self-center">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
@@ -41,30 +45,28 @@
                 <!-- Start Page Content -->
                 <div class="card-body">
                     <div class="login-form">
-                    <h2 class="control-label">Transactions Beetween your Own Accounts</h4>
-                    <form action="" method="POST">
                         <div class="form-group">
-                            <select id="soflow">
-                                <option>FROM:</option>
-                                <option>lista de cuentas de ahorros y corriente</option>
-                                <!--document.elementById("soflow").value retorna la opcion seleccionada  posicion 0 es "select a currency"-->
-                            </select>
+                            <table id="accountTable">
+                                <tr>
+                                    <th>FROM</th>
+                                    <th>TO</th>
+                                    <th>AMOUNT</th>
+                                    <th>COMMENT</th>
+                                    <th>DATA</th>
+                                    <th>TIME</th>
+                                </tr>
+                                <% for(let i = 0; i < data.length; i++) { %>
+                                <tr>                                 
+                                    <td><button class="btn btn-primary btn-flat" onclick="deleteAcc(this)">Delete</button></td>
+                                </tr>
+                                <% } %>
+                                <!--!!-->
+                            </table>
                         </div>
-                            <label>Input the Amount to Transfer</label>
-                            <input name="money" type="number" min="0" step="any" class="form-control" placeholder="Amount" required>
-                        <div class="form-group">
-                            <select id="soflow">
-                                <option>TO:</option>
-                                <option>lista de cuentas de ahorros y corriente</option>
-                                <!--document.elementById("soflow").value retorna la opcion seleccionada  posicion 0 es "select a currency"-->
-                            </select>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Transfer</button>
-                    </form>
-                    <a href="/users/dashboard"> <button type="button" class="btn btn-secondary">Close</button></a>
-                </div>
+                    </div>
                 </div>
             </div>
+            <% include ./../../partials/dashboard/deleteform %>
             <!-- End Container fluid  -->
             <!-- footer -->
             <!-- End footer -->
