--- a/views/user/dashboard/main.ejs
+++ b/views/user/dashboard/main.ejs
@@ -113,6 +113,19 @@
                         </a>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="card">
+                            <div class="card-title">
+                                <h4>Echart</h4>
+                            </div>
+                            <div class="card-content">
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>        
             <!-- End Container fluid  -->
             <% include ./../../partials/dashboard/changecoin %>
@@ -126,6 +139,7 @@
     </div>
     <!-- End Wrapper -->
     <% include ./../../partials/dashboard/libjs %>
+    
 
 </body>
 
