--- a/views/partials/dashboard/libjs.ejs
+++ b/views/partials/dashboard/libjs.ejs
@@ -13,20 +13,8 @@
 
 
     <!-- Amchart -->
-     <script src="/js/lib/morris-chart/raphael-min.js"></script>
-    <script src="/js/lib/morris-chart/morris.js"></script>
-    <script src="/js/lib/morris-chart/dashboard1-init.js"></script>
+    <script src="/lib/d3/d3.min.js"></script>
 
-
-	<script src="/js/lib/calendar-2/moment.latest.min.js"></script>
-    <!-- scripit init-->
-    <script src="/js/lib/calendar-2/semantic.ui.min.js"></script>
-    <!-- scripit init-->
-    <script src="/js/lib/calendar-2/prism.min.js"></script>
-    <!-- scripit init-->
-    <script src="/js/lib/calendar-2/pignose.calendar.min.js"></script>
-    <!-- scripit init-->
-    <script src="/js/lib/calendar-2/pignose.init.js"></script>
 
     <script src="/js/lib/owl-carousel/owl.carousel.min.js"></script>
     <script src="/js/lib/owl-carousel/owl.carousel-init.js"></script>
