--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -6976,3 +6976,39 @@ td, th {
     display: inline-block !important;
   }
 }
+
+.widget {
+  margin: 0 auto;
+  width:350px;
+  margin-top:50px;
+  background-color: #222D3A;
+  border-radius: 5px;
+  box-shadow: 0px 0px 1px 0px #06060d;
+
+}
+
+svg#chart {
+  display: block;
+  margin: 0 auto;
+}
+
+text.inner-circle {
+  font-weight: 400;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+.arc {
+  cursor: pointer;
+}
+  
+.arc:hover {
+    opacity: .85;
+  }
+  
+  text {
+    font-weight: 300;
+    font-size: 18px;
+    color: #fff;
+  }
+}
