--- a/views/partials/dashboard/dash_sidebar.ejs
+++ b/views/partials/dashboard/dash_sidebar.ejs
@@ -6,8 +6,8 @@
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav">
                         <li class="nav-devider"></li>
-                        <li> <a href="/users/dashboard"><i class="fa fa-home"></i><span>Home</span></a> </li>
-                        <li> <a class="has-arrow" href="#" aria-expanded="false"><i class="fa fa-bank"></i><span class="hide-menu">Accounts</span></a>
+                        <li><a href="/users/dashboard"><i class="fa fa-home"></i><span class="hide-menu">Home</span></a> </li>
+                        <li><a class="has-arrow" href="#" aria-expanded="false"><i class="fa fa-bank"></i><span class="hide-menu">Accounts</span></a>
                             <ul aria-expanded="false" class="collapse">
                                 <li><a href="/users/dashboard/accounts/credit">Credit</a></li>
                                 <li><a href="/users/dashboard/accounts/savings">Savings</a></li>
@@ -15,14 +15,8 @@
                                 <li><a href="/users/dashboard/accounts/budget">Budgets</a></li>
                             </ul>
                         </li>
-                        <li> <a href="/users/dashboard/group_accounts"><i class="fa fa-object-group"></i><span>Groups</span></a> </li>
-                        <li> <a href="/users/dashboard/transactions"><i class="fa fa-exchange"></i><span>Transactions</span></a> </li>
-                        <!--
-                        <li> <a href="#" class="disabled"><i class="fa fa-bitcoin"></i><span>Criptocurrency</span></a> </li>
-                        <li> <a href="#" class="disabled"><i class="fa fa-money"></i><span>Investments</span></a> </li>
-                        <li> <a href="#" class="disabled"><i class="fa fa-book"></i><span>Balance</span></a> </li>
-                        <li> <a href="#" class="disabled"><i class="fa fa-line-chart"></i><span>Analitics</span></a> </li>
-                        -->
+                        <li> <a href="/users/dashboard/group_accounts"><i class="fa fa-object-group"></i><span class="hide-menu">Groups</span></a> </li>
+                        <li> <a href="/users/dashboard/transactions"><i class="fa fa-exchange"></i><span class="hide-menu">Transactions</span></a> </li>
                     </ul>
                 </nav>
                 <!-- End Sidebar navigation -->
