Sync accounts checkbox to groups

--- a/views/user/dashboard/group.ejs
+++ b/views/user/dashboard/group.ejs
@@ -44,26 +44,53 @@
                                  <div class="login-form">
                                     <h2 class="control-label">Select to Sync your Accounts</h4>
                                         <label class="control-label">Credit Accounts</label>
-                                         <!--for
-                                                <tr>
-                                                    <td>numerocuenta  balancecuenta etc</td>
-                                                    <td><input style="width:100%" type="checkbox" name="nombrevariable" value="numerocuenta"></td>                                        
-                                                </tr>
-                                            -->
-                                        <label class="control-label">Savings Accounts</label>
-                                         <!--for
-                                                <tr>
-                                                    <td>numerocuenta  balancecuenta etc</td>
-                                                    <td><input style="width:100%" type="checkbox" name="nombrevariable" value="numerocuenta"></td>                                        
-                                                </tr>
-                                            -->
-                                        <label class="control-label">Currrent Accounts</label>
-                                         <!--for
-                                                <tr>
-                                                    <td>numerocuenta  balancecuenta etc</td>
-                                                    <td><input style="width:100%" type="checkbox" name="nombrevariable" value="numerocuenta"></td>                                        
-                                                </tr>
-                                            -->                 
+                            <table>
+                                <tr>
+                                    <td class="text-center">Account Number</td>
+                                    <td class="text-center">Balance</td>
+                                </tr>
+                                <% for(let i = 0; i < results.length; i++) { %>
+                                    <%if (results[i].typeAcc =="credit") { %>
+                                        <tr>
+                                        <td>#<%=results[i].numberAcc%> <%=results[i].typeAcc%></td>
+                                        <td><strong>$</strong> <%=results[i].balanceAcc%></td>
+                                        <td><input style="width:100%" type="checkbox" name="acc<%=i%>" value="<%=results[i].bankAcc%>,<%=results[i].numberAcc%>,<%=results[i].typeAcc%>"></td>
+                                    </tr>    
+                                    <% } %>
+                                <% } %>
+                            </table>
+                            <label class="control-label">Savings Accounts</label>
+                            <table>
+                                <tr>
+                                    <td class="text-center">Account Number</td>
+                                    <td class="text-center">Balance</td>
+                                </tr>
+                                <% for(let i = 0; i < results.length; i++) { %>
+                                    <%if (results[i].typeAcc =="saving") { %>
+                                        <tr>
+                                        <td>#<%=results[i].numberAcc%> <%=results[i].typeAcc%></td>
+                                        <td><strong>$</strong> <%=results[i].balanceAcc%></td>
+                                        <td><input style="width:100%" type="checkbox" name="acc<%=i%>" value="<%=results[i].bankAcc%>,<%=results[i].numberAcc%>,<%=results[i].typeAcc%>"></td>
+                                    </tr>    
+                                    <% } %>
+                                <% } %>
+                            </table>
+                            
+                            <label class="control-label">Currrent Accounts</label>
+                            <table>
+                                <tr>
+                                    <td class="text-center">Account Number</td>
+                                    <td class="text-center">Balance</td>
+                                </tr>
+                                <% for(let i = 0; i < results.length; i++) { %>
+                                    <%if (results[i].typeAcc =="current") { %>
+                                        <tr>
+                                        <td>#<%=results[i].numberAcc%> <%=results[i].typeAcc%></td>
+                                        <td><strong>$</strong> <%=results[i].balanceAcc%></td>
+                                        <td><input style="width:100%" type="checkbox" name="acc<%=i%>" value="<%=results[i].bankAcc%>,<%=results[i].numberAcc%>,<%=results[i].typeAcc%>"></td>
+                                    </tr>    
+                                    <% } %>
+                                <% } %>              
                                 </div>
                                  <!-- Formulario checkbox con las cuentas del usuario -->
                                   
