--- a/views/user/dashboard/showgroup.ejs
+++ b/views/user/dashboard/showgroup.ejs
@@ -54,22 +54,21 @@
                 <div class="card-body">
                     <div class="login-form">
                         <div class="form-group">
-                            <table>
+                            <table id="accountTable">
                                 <tr>
                                     <th>Account</th>
-                                    <th>Type</th>
                                     <th>Bank</th>
-                                    <th>Balance</th>                                    
+                                    <th>Balance</th>
                                     <th>Delete</th>
                                 </tr>
-                                <!--De Api-->
+                                <% for(let i = 0; i < data.length; i++) { %>
                                 <tr>
-                                    <td>xxxxx</td>
-                                    <th>xxxxx</th>
-                                    <td>xxxxx</td>
-                                    <td>xxxxx</td>
-                                    <td><button class="btn btn-primary btn-flat" onclick="deleteAcc()">Delete</button></td>
+                                    <td><%=data[i].number_acc%></td>
+                                    <td><%=data[i].name_bank%></td>
+                                    <td>$<%=balances[i]%></td>                                    
+                                    <td><button class="btn btn-primary btn-flat" onclick="deleteAcc(this)">Delete</button></td>
                                 </tr>
+                                <% } %>
                                 <!--!!-->
                             </table>
                         </div>
@@ -79,20 +78,61 @@
                 <div class="card-body">
                     <div class="login-form">
                         <h2 class="control-label">Add Account</h4>
-                        <form>
+                        <form action="" method="post">
                             <label class="control-label">Credit Accounts</label>
-                            <div class="form-group">
-                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                            </div>
+                            <table>
+                                <tr>
+                                    <td class="text-center">Account Number</td>
+                                    <td class="text-center">Balance</td>
+                                </tr>
+                                <% for(let i = 0; i < results.length; i++) { %>
+                                    <%if (results[i].typeAcc =="credit") { %>
+                                        <tr>
+                                        <td>#<%=results[i].numberAcc%> <%=results[i].typeAcc%></td>
+                                        <td><strong>$</strong> <%=results[i].balanceAcc%></td>
+                                        <td><input style="width:100%" type="checkbox" name="acc<%=i%>" value="<%=results[i].bankAcc%>,<%=results[i].numberAcc%>,<%=results[i].typeAcc%>"></td>
+                                    </tr>    
+                                    <% } %>
+                                <% } %>
+                            </table>
                             <label class="control-label">Savings Accounts</label>
-                            <div class="form-group">
-                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                            </div>
+                            <table>
+                                <tr>
+                                    <td class="text-center">Account Number</td>
+                                    <td class="text-center">Balance</td>
+                                </tr>
+                                <% for(let i = 0; i < results.length; i++) { %>
+                                    <%if (results[i].typeAcc =="saving") { %>
+                                        <tr>
+                                        <td>#<%=results[i].numberAcc%> <%=results[i].typeAcc%></td>
+                                        <td><strong>$</strong> <%=results[i].balanceAcc%></td>
+                                        <td><input style="width:100%" type="checkbox" name="acc<%=i%>" value="<%=results[i].bankAcc%>,<%=results[i].numberAcc%>,<%=results[i].typeAcc%>"></td>
+                                    </tr>    
+                                    <% } %>
+                                <% } %>
+                            </table>
+                            
                             <label class="control-label">Currrent Accounts</label>
-                            <div class="form-group">
-                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Add</button>
+                            <table>
+                                <tr>
+                                    <td class="text-center">Account Number</td>
+                                    <td class="text-center">Balance</td>
+                                </tr>
+                                <% for(let i = 0; i < results.length; i++) { %>
+                                    <%if (results[i].typeAcc =="current") { %>
+                                        <tr>
+                                        <td>#<%=results[i].numberAcc%> <%=results[i].typeAcc%></td>
+                                        <td><strong>$</strong> <%=results[i].balanceAcc%></td>
+                                        <td><input style="width:100%" type="checkbox" name="acc<%=i%>" value="<%=results[i].bankAcc%>,<%=results[i].numberAcc%>,<%=results[i].typeAcc%>"></td>
+                                    </tr>    
+                                    <% } %>
+                                <% } %>
+                            </table>
+
+                            
+                            <br>
+                            <button type="submit" class="btn btn-primary">Sync</button>
+                            <a href="/users/dashboard/add_account"><button class="btn btn-secondary">Cancel</button></a>
                         </form>
                     </div>
                 </div>
