--- a/views/user/dashboard/transactions.ejs
+++ b/views/user/dashboard/transactions.ejs
@@ -26,7 +26,7 @@
             <!-- Bread crumb -->
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
-                    <h3 class="text-primary">Credit Accounts</h3> </div>                 
+                    <h3 class="text-primary">Transactions History</h3> </div>                 
                 <div class="col-md-7 align-self-center">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
